# tetrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
res/shaders/: shader.frag  shader.vert  texquad.frag
src/: game.rs  graphics.rs  main.rs
src/graphics/: lines.rs  shader.rs  text.rs
