[package]
name = "tet_rs"
version = "0.1.0"
authors = ["Lucas W. <6264382+LucasWolschick@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
futures = "0.3.13" # async executor
bytemuck = { version = "1.5.1", features = [ "derive" ] } # safe slice casting
cgmath = "0.18.0" # linear algebra maths
rayon = "1.5.0" # parallel execution
image = "0.23.14" # image manipulation
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", head = "53600ecd834893ef3e90458c48b84f2582d6c343", rev = "53600ecd834893ef3e90458c48b84f2582d6c343" } # graphics API 
rand = "0.8.3" # random number generation

[build-dependencies]
glob = "0.3"
shaderc = "0.7.2"